--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <title>Armata Financical Group</title>
   <link rel="stylesheet" href="./style/swiper-bundle.min.css">
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="manifest" href="manifest.json">
+
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="AFG">
+  <meta name="apple-mobile-web-app-title" content="AFG">
+  <meta name="theme-color" content="#000000">
+  <meta name="msapplication-navbutton-color" content="#000000">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="msapplication-starturl" content="https://ura2rist.github.io/Armata-Financical-Group/">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="icon" href="/img/logo.png">
+  <link rel="apple-touch-icon" href="/img/logo.png">
 </head>
 
 <body class="body">
